syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.system";
option java_outer_classname = "ServerDetailsServiceProto";

service ServerDetailsService {
    rpc GetServerDetails (google.protobuf.Empty) returns (ServerConnectionDetailsRpcDto);
}

message ServerConnectionDetailsRpcDto {
    string name = 1;
    string address = 2;
    int32 port = 3;
}
